[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/PaletteSprite.gd" type="Script" id=1]
[ext_resource path="res://assets/Snails/snail_palette_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/Snails/snail-red.png" type="Texture" id=3]
[ext_resource path="res://PaletteSwap.gdshader" type="Shader" id=4]
[ext_resource path="res://assets/Snails/snail_palette_yellow.png" type="Texture" id=5]
[ext_resource path="res://assets/Snails/snail_palette_red.png" type="Texture" id=6]
[ext_resource path="res://assets/Snails/snail_palette_green.png" type="Texture" id=7]
[ext_resource path="res://src/Snails/Snail.gd" type="Script" id=8]
[ext_resource path="res://assets/Snails/move.sfxr" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.535
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PaletteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.35, 0.43, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.53 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "move_done"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "turn"
tracks/0/type = "value"
tracks/0/path = NodePath("PaletteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 8 )

[node name="Snail" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 8 )

[node name="PaletteSprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
hframes = 8
vframes = 2
frame = 2
script = ExtResource( 1 )
Palettes = [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move"
playback_speed = 0.75
anims/move = SubResource( 2 )
anims/turn = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 14, 0 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="RayCastTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2( 8, -4 )
enabled = true
exclude_parent = false
cast_to = Vector2( 6, 0 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RayCastTimer" to="." method="_on_RayCastTimer_timeout"]
